--- a/test.html
+++ b/test.html
@@ -70,27 +70,27 @@
         </li>
     </ul>
     <ul class="contact-list">
-        <li class="contact-item phone">
-            <a href="tel:88007777777">
-                <div class="icon"></div>
-                88007777777
-            </a>
-        </li>
-        <li class="contact-item mail">
-            <a href="mailto:test@mail.com">
-                <div class="icon"></div>
-                test@mail.com
-            </a>
-        </li>
-        <li class="contact-item map-item">
-            <a href="#">
-                <div class="icon"></div>
-                г. Москва, ул. Московская, д.1/2
-            </a>
-        </li>
-        <li class="contact-item contact-item__line ">
-            <div class="line"></div>
-        </li>
+<!--        <li class="contact-item phone">-->
+<!--            <a href="tel:88007777777">-->
+<!--                <div class="icon"></div>-->
+<!--                88007777777-->
+<!--            </a>-->
+<!--        </li>-->
+<!--        <li class="contact-item mail">-->
+<!--            <a href="mailto:test@mail.com">-->
+<!--                <div class="icon"></div>-->
+<!--                test@mail.com-->
+<!--            </a>-->
+<!--        </li>-->
+<!--        <li class="contact-item map-item">-->
+<!--            <a href="#">-->
+<!--                <div class="icon"></div>-->
+<!--                г. Москва, ул. Московская, д.1/2-->
+<!--            </a>-->
+<!--        </li>-->
+<!--        <li class="contact-item contact-item__line ">-->
+<!--            <div class="line"></div>-->
+<!--        </li>-->
         <li class="contact-item instagram">
             <a href="#">
                 <span class="icon"></span>
