add media for few pages

--- a/contact.html
+++ b/contact.html
@@ -113,7 +113,7 @@
 </nav>
 <!-- end navbar slider -->
 
-<div class="contact single-contact section">
+<div class="contact contact-single section">
     <div class="wrapper">
         <div class="contact-inner">
             <div class="contact-body">
