--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
 <!-- begin fullpage -->
 <div id="fullpage">
 
-    <div class="section_one section aboutme" data-anchor="aboutme">
+    <div class="section_one section" data-anchor="section_one">
         <div class="wrapper">
             <div class="section_one-inner">
                 <a href="#" class="logo">
@@ -410,7 +410,7 @@
     </div>
 
 </div>
-<!-- end fullpage -->
+<!--  end fullpage  -->
 
 <script src="js/jquery-3.6.0.min.js"></script>
 <script src="js/jquery.fullPage.min.js"></script>
