add media for company page

--- a/company.html
+++ b/company.html
@@ -194,14 +194,14 @@
                         </div>
                         <div class="info">
                             <div class="info-logo"></div>
-                            <div class="text"><span>Наш подход к работе:</span> «Мы и Вы-одна команда!».</div>
+                            <div class="text text-media"><span>Наш подход к работе:</span> «Мы и Вы-одна команда!».</div>
                         </div>
 
                         <div class="d-flex">
                             <div class="left">
                                 <img src="images/logo-56.png" alt="company-logo">
                             </div>
-                            <div class="right">
+                            <div class="right media-center">
                                 <p class="description">
                                     Будем рады оказать содействие в развитии Вашего бизнеса.
                                     <span class="bold">Развивайтесь и будьте здоровы!</span>
