add video tutorial page

--- a/new-item.html
+++ b/new-item.html
@@ -5,7 +5,7 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>DELFIN</title>
+    <title>Партнерские отношения с компанией ТрансСервис </title>
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body class="overflow-hidden">
@@ -71,27 +71,30 @@
         </li>
     </ul>
     <ul class="contact-list">
-<!--        <li class="contact-item phone">-->
-<!--            <a href="tel:88007777777">-->
-<!--                <div class="icon"></div>-->
-<!--                88007777777-->
-<!--            </a>-->
-<!--        </li>-->
-<!--        <li class="contact-item mail">-->
-<!--            <a href="mailto:test@mail.com">-->
-<!--                <div class="icon"></div>-->
-<!--                test@mail.com-->
-<!--            </a>-->
-<!--        </li>-->
-<!--        <li class="contact-item map-item">-->
-<!--            <a href="#">-->
-<!--                <div class="icon"></div>-->
-<!--                г. Москва, ул. Московская, д.1/2-->
-<!--            </a>-->
-<!--        </li>-->
-<!--        <li class="contact-item contact-item__line ">-->
-<!--            <div class="line"></div>-->
-<!--        </li>-->
+        <li class="contact-item contact-item__line show-mobile ">
+            <div class="line"></div>
+        </li>
+        <li class="contact-item phone show-mobile">
+            <a href="tel:88007777777">
+                <div class="icon"></div>
+                88007777777
+            </a>
+        </li>
+        <li class="contact-item mail show-mobile">
+            <a href="mailto:test@mail.com">
+                <div class="icon"></div>
+                test@mail.com
+            </a>
+        </li>
+        <li class="contact-item map-item show-mobile">
+            <a href="#">
+                <div class="icon"></div>
+                г. Москва, ул. Московская, д.1/2
+            </a>
+        </li>
+        <li class="contact-item contact-item__line show-mobile ">
+            <div class="line"></div>
+        </li>
         <li class="contact-item instagram">
             <a href="#">
                 <span class="icon"></span>
@@ -137,15 +140,18 @@
                             Мы наладили с компанией ТрансСервис долгосрочные партнерские отношения, и с 2019 г.
                             закрываем вопросы, связанные с финансированием. Мы гордимся тем, что нам удалось раскрыть
                             наши компетенции в этой Компании и стать для нее надежным партнером. </p>
+
                         <div class="info">
                             <div class="info-logo"></div>
                             <div class="text">Мы желаем Павлу Викторовичу и всей команде «ТрансСервис» устойчивого
                                 развития и больших побед!
                             </div>
                         </div>
+
                         <p class="description dark">
                             Александр Федюнин и Команда «DelFin»
                         </p>
+
                     </div>
 
                 </div>
