--- a/contact.html
+++ b/contact.html
@@ -5,7 +5,7 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>DELFIN</title>
+    <title>Контакты</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
@@ -70,27 +70,30 @@
         </li>
     </ul>
     <ul class="contact-list">
-<!--        <li class="contact-item phone">-->
-<!--            <a href="tel:88007777777">-->
-<!--                <div class="icon"></div>-->
-<!--                88007777777-->
-<!--            </a>-->
-<!--        </li>-->
-<!--        <li class="contact-item mail">-->
-<!--            <a href="mailto:test@mail.com">-->
-<!--                <div class="icon"></div>-->
-<!--                test@mail.com-->
-<!--            </a>-->
-<!--        </li>-->
-<!--        <li class="contact-item map-item">-->
-<!--            <a href="#">-->
-<!--                <div class="icon"></div>-->
-<!--                г. Москва, ул. Московская, д.1/2-->
-<!--            </a>-->
-<!--        </li>-->
-<!--        <li class="contact-item contact-item__line ">-->
-<!--            <div class="line"></div>-->
-<!--        </li>-->
+        <li class="contact-item contact-item__line show-mobile ">
+            <div class="line"></div>
+        </li>
+        <li class="contact-item phone show-mobile">
+            <a href="tel:88007777777">
+                <div class="icon"></div>
+                88007777777
+            </a>
+        </li>
+        <li class="contact-item mail show-mobile">
+            <a href="mailto:test@mail.com">
+                <div class="icon"></div>
+                test@mail.com
+            </a>
+        </li>
+        <li class="contact-item map-item show-mobile">
+            <a href="#">
+                <div class="icon"></div>
+                г. Москва, ул. Московская, д.1/2
+            </a>
+        </li>
+        <li class="contact-item contact-item__line show-mobile ">
+            <div class="line"></div>
+        </li>
         <li class="contact-item instagram">
             <a href="#">
                 <span class="icon"></span>
@@ -118,7 +121,7 @@
         <div class="contact-inner">
             <div class="contact-body">
                 <div class="contact-info">
-                    <div class="contact-header">
+                    <div class="contact-header no__show-mobile">
                         <div class="sub-title"></div>
                         <h2 class="title">Контакты</h2>
                     </div>
@@ -166,7 +169,12 @@
                     <button class="btn">Связаться с нами</button>
                 </div>
                 <div class="map"></div>
-
+                <div class="contact-info">
+                    <div class="contact-header show-mobile">
+                        <div class="sub-title"></div>
+                        <h2 class="title">Контакты</h2>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
