--- a/delfin-video.html
+++ b/delfin-video.html
@@ -5,10 +5,10 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Новости</title>
+    <title>DelFin видео</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
-<body>
+<body class="overflow-hidden">
 <!-- navbar header -->
 <header class="header header-active">
     <div class="wrapper">
@@ -73,27 +73,27 @@
         <li class="contact-item contact-item__line show-mobile ">
             <div class="line"></div>
         </li>
-        <li class="contact-item phone show-mobile">
-            <a href="tel:88007777777">
-                <div class="icon"></div>
-                88007777777
-            </a>
-        </li>
-        <li class="contact-item mail show-mobile">
-            <a href="mailto:test@mail.com">
-                <div class="icon"></div>
-                test@mail.com
-            </a>
-        </li>
-        <li class="contact-item map-item show-mobile">
-            <a href="#">
-                <div class="icon"></div>
-                г. Москва, ул. Московская, д.1/2
-            </a>
-        </li>
-        <li class="contact-item contact-item__line show-mobile ">
-            <div class="line"></div>
-        </li>
+                <li class="contact-item phone show-mobile">
+                    <a href="tel:88007777777">
+                        <div class="icon"></div>
+                        88007777777
+                    </a>
+                </li>
+                <li class="contact-item mail show-mobile">
+                    <a href="mailto:test@mail.com">
+                        <div class="icon"></div>
+                        test@mail.com
+                    </a>
+                </li>
+                <li class="contact-item map-item show-mobile">
+                    <a href="#">
+                        <div class="icon"></div>
+                        г. Москва, ул. Московская, д.1/2
+                    </a>
+                </li>
+                <li class="contact-item contact-item__line show-mobile ">
+                    <div class="line"></div>
+                </li>
         <li class="contact-item instagram">
             <a href="#">
                 <span class="icon"></span>
@@ -116,75 +116,62 @@
 </nav>
 <!-- end navbar slider -->
 
-<div class="advantages advantages-single section">
+<div class="advantages advantages-single advantages-video section">
     <div class="wrapper">
         <div class="advantages-inner">
             <div class="advantages-header">
                 <div class="sub-title"></div>
-                <h2 class="title">Новости</h2>
+                <h2 class="title">DelFin видео</h2>
             </div>
             <div class="advantages-body">
-
-                <div class="news-list">
+                <div class="news-list video-list">
                     <div class="news-item">
                         <div class="news-img">
-                            <img src="images/news-1.png" alt="news">
-                        </div>
-                        <div class="news-info">
-                            <div class="news-title">Партнерские отношения с компанией ТрансСервис </div>
-                            <div class="news-description">С учредителем Группы компаний «ТрансСервис» и ее генеральным директором- Корчагиным Павлом Викторовичем.</div>
-                            <a href="#" class="news-btn btn">Подробнее</a>
+                            <iframe width="560" height="315" src="https://www.youtube.com/embed/syQZeTSAedM?autoplay=0"
+                                    title="YouTube video player"
+                                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                                    allowfullscreen></iframe>
                         </div>
                     </div>
                     <div class="news-item">
                         <div class="news-img">
-                            <img src="images/news-2.png" alt="news">
-                        </div>
-                        <div class="news-info">
-                            <div class="news-title">Партнерские отношения с компанией ТрансСервис </div>
-                            <div class="news-description">С учредителем Группы компаний «ТрансСервис» и ее генеральным директором- Корчагиным Павлом Викторовичем.</div>
-                            <a href="#" class="news-btn btn">Подробнее</a>
+                            <iframe width="560" height="315" src="https://www.youtube.com/embed/syQZeTSAedM?autoplay=0"
+                                    title="YouTube video player"
+                                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                                    allowfullscreen></iframe>
                         </div>
                     </div>
                     <div class="news-item">
                         <div class="news-img">
-                            <img src="images/news-3.png" alt="news">
-                        </div>
-                        <div class="news-info">
-                            <div class="news-title">Партнерские отношения с компанией ТрансСервис </div>
-                            <div class="news-description">С учредителем Группы компаний «ТрансСервис» и ее генеральным директором- Корчагиным Павлом Викторовичем.</div>
-                            <a href="#" class="news-btn btn">Подробнее</a>
+                            <iframe width="560" height="315" src="https://www.youtube.com/embed/syQZeTSAedM?autoplay=0"
+                                    title="YouTube video player"
+                                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                                    allowfullscreen></iframe>
                         </div>
                     </div>
 
                     <div class="news-item">
                         <div class="news-img">
-                            <img src="images/news-3.png" alt="news">
-                        </div>
-                        <div class="news-info">
-                            <div class="news-title">Партнерские отношения с компанией ТрансСервис </div>
-                            <div class="news-description">С учредителем Группы компаний «ТрансСервис» и ее генеральным директором- Корчагиным Павлом Викторовичем.</div>
-                            <a href="#" class="news-btn btn">Подробнее</a>
+                            <iframe width="560" height="315" src="https://www.youtube.com/embed/syQZeTSAedM?autoplay=0"
+                                    title="YouTube video player"
+                                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                                    allowfullscreen></iframe>
                         </div>
                     </div>
                     <div class="news-item">
                         <div class="news-img">
-                            <img src="images/news-1.png" alt="news">
-                        </div>
-                        <div class="news-info">
-                            <div class="news-title">Партнерские отношения с компанией ТрансСервис </div>
-                            <div class="news-description">С учредителем Группы компаний «ТрансСервис» и ее генеральным директором- Корчагиным Павлом Викторовичем.</div>
-                            <a href="#" class="news-btn btn">Подробнее</a>
+                            <iframe width="560" height="315" src="https://www.youtube.com/embed/syQZeTSAedM?autoplay=0"
+                                    title="YouTube video player"
+                                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                                    allowfullscreen></iframe>
                         </div>
                     </div>
                     <div class="news-item">
                         <div class="news-img">
-                            <img src="images/news-2.png" alt="news">
-                        </div>
-                        <div class="news-info">
-                            <div class="news-title">Партнерские отношения с компанией ТрансСервис </div>
-                            <div class="news-description">С учредителем Группы компаний «ТрансСервис» и ее генеральным директором- Корчагиным Павлом Викторовичем.</div>
-                            <a href="#" class="news-btn btn">Подробнее</a>
+                            <iframe width="560" height="315" src="https://www.youtube.com/embed/syQZeTSAedM?autoplay=0"
+                                    title="YouTube video player"
+                                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                                    allowfullscreen></iframe>
                         </div>
                     </div>
                 </div>
@@ -197,5 +184,3 @@
 <script src="js/main.js"></script>
 </body>
 </html>
-
-
