--- a/delfin-video.html
+++ b/delfin-video.html
@@ -13,32 +13,33 @@
 <header class="header header-active">
     <div class="wrapper">
         <div class="header__inner">
-            <a href="#" class="header__logo logo">
+            <a href="index.html" class="header__logo logo">
                 <img src="images/logo.svg" alt="logo">
                 <img class="mob" src="images/logo-mob.svg" alt="logo">
                 <img src="images/logo-1.svg" alt="logo">
             </a>
             <ul class="header__menu menu">
+                <li class="header__menu-item menu-item">
+                    <a href="delfin-video.html" class="header__menu-link menu-link">О компании</a>
+                </li>
+                <li class="header__menu-item menu-item">
+                    <a href="services.html" class="header__menu-link menu-link">Услуги</a>
+                </li>
                 <li class="header__menu-item menu-item menu-item__active">
-                    <a href="#" class="header__menu-link menu-link">О компании</a>
+                    <a href="delfin-video.html" class="header__menu-link menu-link">DelFin видео</a>
                 </li>
                 <li class="header__menu-item menu-item">
-                    <a href="#" class="header__menu-link menu-link">Услуги</a>
+                    <a href="faq.html" class="header__menu-link menu-link">Вопрос-ответ</a>
                 </li>
                 <li class="header__menu-item menu-item">
-                    <a href="#" class="header__menu-link menu-link">DelFin видео</a>
+                       <a href="contact.html" class="header__menu-link menu-link">Наши партнеры</a>
                 </li>
                 <li class="header__menu-item menu-item">
-                    <a href="#" class="header__menu-link menu-link">Вопрос-ответ</a>
+                                              <a href="news.html" class="header__menu-link menu-link">Новости</a>
+
                 </li>
                 <li class="header__menu-item menu-item">
-                    <a href="#" class="header__menu-link menu-link">Наши партнеры</a>
-                </li>
-                <li class="header__menu-item menu-item">
-                    <a href="#" class="header__menu-link menu-link">Новости</a>
-                </li>
-                <li class="header__menu-item menu-item">
-                    <a href="#" class="header__menu-link menu-link">Контакты</a>
+                        <a href="contact.html" class="header__menu-link menu-link">Контакты</a>
                 </li>
             </ul>
         </div>
@@ -52,11 +53,21 @@
         <button></button>
     </div>
     <ul class="nav__menu menu">
-        <li class="nav__menu-item menu-item menu-item__active">DelFin видео</li>
-        <li class="nav__menu-item menu-item">Вопрос-ответ</li>
-        <li class="nav__menu-item menu-item">Партнеры</li>
-        <li class="nav__menu-item menu-item">Новости</li>
-        <li class="nav__menu-item menu-item">Новости</li>
+         <li class="nav__menu-item menu-item">
+            <a href="index.html">Главная</a>
+        </li>
+        <li class="nav__menu-item menu-item menu-item__active">
+            <a href="delfin-video.html">DelFin видео</a>
+        </li>
+        <li class="nav__menu-item menu-item">
+            <a href="faq.html">Вопрос-ответ</a>
+        </li>
+        <li class="nav__menu-item menu-item">
+            <a href="partners.html">Партнеры</a>
+        </li>
+        <li class="nav__menu-item menu-item">
+            <a href="news.html">Новости</a>
+        </li>
     </ul>
     <ul class="nav__social social">
         <li class="nav__social-item social-item">
@@ -116,7 +127,7 @@
 </nav>
 <!-- end navbar slider -->
 
-<div class="advantages advantages-single advantages-video section">
+<div class="advantages advantages-single advantages-video">
     <div class="wrapper">
         <div class="advantages-inner">
             <div class="advantages-header">
