--- a/index.html
+++ b/index.html
@@ -7,38 +7,40 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>DELFIN</title>
     <link rel="stylesheet" href="css/style.css">
+    <script src='https://api-maps.yandex.ru/2.1/?lang=ru_RU'></script>
 </head>
 <body class="home">
 <!-- navbar header -->
 <header class="header header-active">
     <div class="wrapper">
         <div class="header__inner">
-            <a href="#" class="header__logo logo">
+            <a href="index.html" class="header__logo logo">
                 <img src="images/logo.svg" alt="logo">
                 <img class="mob" src="images/logo-mob.svg" alt="logo">
                 <img src="images/logo-1.svg" alt="logo">
             </a>
             <ul class="header__menu menu">
                 <li class="header__menu-item menu-item menu-item__active">
-                    <a href="#" class="header__menu-link menu-link">О компании</a>
+                    <a href="delfin-video.html" class="header__menu-link menu-link">О компании</a>
                 </li>
                 <li class="header__menu-item menu-item">
-                    <a href="#" class="header__menu-link menu-link">Услуги</a>
+                    <a href="services.html" class="header__menu-link menu-link">Услуги</a>
                 </li>
                 <li class="header__menu-item menu-item">
-                    <a href="#" class="header__menu-link menu-link">DelFin видео</a>
+                    <a href="delfin-video.html" class="header__menu-link menu-link">DelFin видео</a>
                 </li>
                 <li class="header__menu-item menu-item">
-                    <a href="#" class="header__menu-link menu-link">Вопрос-ответ</a>
+                    <a href="faq.html" class="header__menu-link menu-link">Вопрос-ответ</a>
                 </li>
                 <li class="header__menu-item menu-item">
-                    <a href="#" class="header__menu-link menu-link">Наши партнеры</a>
+                       <a href="contact.html" class="header__menu-link menu-link">Наши партнеры</a>
                 </li>
                 <li class="header__menu-item menu-item">
-                    <a href="#" class="header__menu-link menu-link">Новости</a>
+                                              <a href="news.html" class="header__menu-link menu-link">Новости</a>
+
                 </li>
                 <li class="header__menu-item menu-item">
-                    <a href="#" class="header__menu-link menu-link">Контакты</a>
+                        <a href="contact.html" class="header__menu-link menu-link">Контакты</a>
                 </li>
             </ul>
         </div>
@@ -51,12 +53,22 @@
     <div class="nav-hamburger hamburger">
         <button></button>
     </div>
-    <ul class="nav__menu menu">
-        <li class="nav__menu-item menu-item menu-item__active">DelFin видео</li>
-        <li class="nav__menu-item menu-item">Вопрос-ответ</li>
-        <li class="nav__menu-item menu-item">Партнеры</li>
-        <li class="nav__menu-item menu-item">Новости</li>
-        <li class="nav__menu-item menu-item">Новости</li>
+    <ul class="nav__menu menu show-mobile">
+         <li class="nav__menu-item menu-item menu-item__active">
+            <a href="index.html">Главная</a>
+        </li>
+        <li class="nav__menu-item menu-item">
+            <a href="delfin-video.html">DelFin видео</a>
+        </li>
+        <li class="nav__menu-item menu-item">
+            <a href="faq.html">Вопрос-ответ</a>
+        </li>
+        <li class="nav__menu-item menu-item">
+            <a href="partners.html">Партнеры</a>
+        </li>
+        <li class="nav__menu-item menu-item">
+            <a href="news.html">Новости</a>
+        </li>
     </ul>
     <ul class="nav__social social">
         <li class="nav__social-item social-item">
@@ -357,7 +369,7 @@
         <div class="wrapper">
             <div class="contact-inner">
                 <div class="contact-body">
-                    <div class="map"></div>
+                    <div class="map" id="map"></div>
                     <div class="contact-info">
                         <div class="contact-header">
                             <div class="sub-title"></div>
