--- a/company.html
+++ b/company.html
@@ -9,6 +9,9 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body class="overflow-hidden">
+<div class="preloader">
+    <img  src="images/preloader.png" alt="preloader">
+</div>
 <!-- navbar header -->
 <header class="header header-active">
     <div class="wrapper">
@@ -241,7 +244,7 @@
     </div>
 </div>
 
-<script src="js/jquery-3.6.0.min.js"></script>
+<script src="js/jquery-3.4.1.min.js"></script>
 <script src="js/main.js"></script>
 </body>
 </html>
