--- a/contact.html
+++ b/contact.html
@@ -10,6 +10,9 @@
     <script src='https://api-maps.yandex.ru/2.1/?lang=ru_RU'></script>
 </head>
 <body>
+<div class="preloader">
+    <img  src="images/preloader.png" alt="preloader">
+</div>
 <!-- navbar header -->
 <header class="header header-active">
     <div class="wrapper">
@@ -192,7 +195,7 @@
     </div>
 </div>
 
-<script src="js/jquery-3.6.0.min.js"></script>
+<script src="js/jquery-3.4.1.min.js"></script>
 <script src="js/main.js"></script>
 </body>
 </html>
