--- a/test.html
+++ b/test.html
@@ -8,7 +8,10 @@
     <title>DELFIN</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
-<body>
+<body class="overflow-hidden">
+<div class="preloader">
+    <img  src="images/preloader.png" alt="preloader">
+</div>
 <!-- navbar header -->
 <header class="header header-active">
     <div class="wrapper">
@@ -129,7 +132,7 @@
 
 <!-- code -->
 
-<script src="js/jquery-3.6.0.min.js"></script>
+<script src="js/jquery-3.4.1.min.js"></script>
 <script src="js/main.js"></script>
 </body>
 </html>
