--- a/new-item.html
+++ b/new-item.html
@@ -9,7 +9,9 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body class="overflow-hidden">
-
+<div class="preloader">
+    <img  src="images/preloader.png" alt="preloader">
+</div>
 <!-- navbar header -->
 <header class="header header-active">
     <div class="wrapper">
@@ -225,7 +227,7 @@
 
 <!-- code -->
 
-<script src="js/jquery-3.6.0.min.js"></script>
+<script src="js/jquery-3.4.1.min.js"></script>
 <script src="js/main.js"></script>
 </body>
 </html>
