--- a/services.html
+++ b/services.html
@@ -8,7 +8,10 @@
     <title>Все услуги</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
-<body>
+<body class="">
+<div class="preloader">
+    <img  src="images/preloader.png" alt="preloader">
+</div>
 <!-- navbar header -->
 <header class="header header-active">
     <div class="wrapper">
@@ -191,7 +194,7 @@
     </div>
 </div>
 
-<script src="js/jquery-3.6.0.min.js"></script>
+<script src="js/jquery-3.4.1.min.js"></script>
 <script src="js/main.js"></script>
 </body>
 </html>
