--- a/company.html
+++ b/company.html
@@ -8,7 +8,7 @@
     <title>О компании</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
-<body class="overflow-hidden">
+<body class="uniqueness uniqueness-single">
 <div class="preloader">
     <img  src="images/preloader.png" alt="preloader">
 </div>
@@ -130,7 +130,7 @@
 </nav>
 <!-- end navbar slider -->
 
-<div class="uniqueness uniqueness-single">
+<div class="">
     <div class="wrapper">
         <div class="uniqueness-inner">
             <div class="uniqueness-body">
@@ -140,7 +140,7 @@
                         <h2 class="title">О компании</h2>
                     </div>
                     <div class="company">
-                        <p class="description">
+                        <p class="description description-1">
                             В современном быстроменяющемся мире, для успешного развития бизнеса очень важно следить за
                             тенденциями, которые происходят в политике, экономике, финансовой сфере, в сфере развития
                             информационных технологий. Очевидно, что рынок, как живой организм, а вместе с ним и бизнес,
