--- a/contact.html
+++ b/contact.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="css/style.css">
     <script src='https://api-maps.yandex.ru/2.1/?lang=ru_RU'></script>
 </head>
-<body>
+<body class="contact contact-single">
 <div class="preloader">
     <img  src="images/preloader.png" alt="preloader">
 </div>
@@ -131,7 +131,7 @@
 </nav>
 <!-- end navbar slider -->
 
-<div class="contact contact-single">
+<div class="">
     <div class="wrapper">
         <div class="contact-inner">
             <div class="contact-body">
