--- a/faq.html
+++ b/faq.html
@@ -8,7 +8,7 @@
     <title>Вопрос-ответ</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
-<body class="overflow-hidden">
+<body class="services services-single">
 <div class="preloader">
     <img  src="images/preloader.png" alt="preloader">
 </div>
@@ -130,7 +130,7 @@
 </nav>
 <!-- end navbar slider -->
 
-<div class="services services-single">
+<div class="">
     <div class="wrapper">
         <div class="services-inner">
             <div class="services-header">
