--- a/news.html
+++ b/news.html
@@ -8,7 +8,7 @@
     <title>Новости</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
-<body class="">
+<body class="advantages advantages-single">
 <div class="preloader">
     <img  src="images/preloader.png" alt="preloader">
 </div>
@@ -130,7 +130,7 @@
 </nav>
 <!-- end navbar slider -->
 
-<div class="advantages advantages-single">
+<div class="">
     <div class="wrapper">
         <div class="advantages-inner">
             <div class="advantages-header">
