--- a/partners.html
+++ b/partners.html
@@ -8,7 +8,7 @@
     <title>Наши партнеры</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
-<body class="overflow-hidden">
+<body class="uniqueness uniqueness-single uniqueness-single-partners">
 <div class="preloader">
     <img  src="images/preloader.png" alt="preloader">
 </div>
@@ -129,7 +129,7 @@
     </ul>
 </nav>
 <!-- end navbar slider -->
-    <div class="uniqueness uniqueness-single uniqueness-single-partners">
+    <div class="">
         <div class="wrapper">
             <div class="uniqueness-inner">
                 <div class="uniqueness-body">
