--- a/service-item.html
+++ b/service-item.html
@@ -8,7 +8,7 @@
     <title>Банковские гарантии</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
-<body class="">
+<body class="uniqueness uniqueness-single">
 <div class="preloader">
     <img  src="images/preloader.png" alt="preloader">
 </div>
@@ -130,7 +130,7 @@
 </nav>
 <!-- end navbar slider -->
 
-<div class="uniqueness uniqueness-single">
+<div class="">
     <div class="wrapper">
         <div class="uniqueness-inner">
             <div class="uniqueness-body">
