--- a/services.html
+++ b/services.html
@@ -8,7 +8,7 @@
     <title>Все услуги</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
-<body class="">
+<body class="services">
 <div class="preloader">
     <img  src="images/preloader.png" alt="preloader">
 </div>
@@ -130,7 +130,7 @@
 </nav>
 <!--  end navbar slider   -->
 
-<div class="services">
+<div class="">
     <div class="wrapper">
         <div class="services-inner">
             <div class="services-header">
