--- a/company.html
+++ b/company.html
@@ -236,7 +236,7 @@
                     <div></div>
                 </div>
 
-                <div class="bg">
+                <div class="bg bg-company">
                     <img src="images/company.png" alt="">
                 </div>
             </div>
