--- a/company.html
+++ b/company.html
@@ -130,7 +130,7 @@
 </nav>
 <!-- end navbar slider -->
 
-<div class="">
+<div class="company-page">
     <div class="wrapper">
         <div class="uniqueness-inner">
             <div class="uniqueness-body">
@@ -183,7 +183,7 @@
                             бизнеса, за частую, просто не хватает времени и человеческих ресурсов.
                             Опыт Команды «<a href="#">DelFin</a>» на рынке финансовых услуг - более 10 лет. </p>
 
-                        <div class="d-flex">
+                        <div class="d-flex company-info" >
                             <div class="left">
                                 <img src="images/company-logo.png" alt="company-logo">
                             </div>
