--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                     <a href="faq.html" class="header__menu-link menu-link">Вопрос-ответ</a>
                 </li>
                 <li class="header__menu-item menu-item">
-                    <a href="contact.html" class="header__menu-link menu-link">Наши партнеры</a>
+                    <a href="partners.html" class="header__menu-link menu-link">Наши партнеры</a>
                 </li>
                 <li class="header__menu-item menu-item">
                     <a href="news.html" class="header__menu-link menu-link">Новости</a>
