--- a/partners.html
+++ b/partners.html
@@ -172,6 +172,7 @@
                                 </a>
                             </li>
                         </ul>
+                        <div></div>
                     </div>
                     <div class="bg">
                         <img src="images/partners.png" alt="">
