--- a/new-item.html
+++ b/new-item.html
@@ -16,6 +16,7 @@
 <header class="header header-active">
     <div class="wrapper">
         <div class="header__inner">
+            <a href="#" class="back back-mob"> Назад </a>
             <a href="index.html" class="header__logo logo">
                 <img src="images/logo.svg" alt="logo">
                 <img class="mob" src="images/logo-mob.svg" alt="logo">
