--- a/services.html
+++ b/services.html
@@ -8,7 +8,7 @@
     <title>Все услуги</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
-<body class="services">
+<body class="services services-single">
 <div class="preloader">
     <img  src="images/preloader.png" alt="preloader">
 </div>
